--- a/src/view/domino/propertyEditors/DominoViewColumnPropertyEditor.mxml
+++ b/src/view/domino/propertyEditors/DominoViewColumnPropertyEditor.mxml
@@ -72,12 +72,6 @@
 										change="columnValueFormula_changeHandler(event)"
 										/>
 
-									 <s:FormItem label="Show twistie when row is expandable" skinClass="skins.FormItemSkin">
-										<s:CheckBox id="columnExpandable"
-													selected="true"
-													change="check_changeHandler(event)"/>
-									</s:FormItem>		
-
 										<s:Button id="newColumnBtn" label="Remove Column"   height="25" width="100"  click="startRemoveColumn()"/>			
 								</s:VGroup>
 							
@@ -88,20 +82,34 @@
 		   paddingLeft="5" paddingTop="10" paddingBottom="10"  >	
 									<s:FormItem label="Sort:" skinClass="skins.FormItemSkin">
 										<s:HGroup>
-											<s:RadioButton id="columnSortNoneRadioBtn" label="None" groupName="columnSortOrder" selected="true"  click="columnSort_changeHandler(event)"/>
-											<s:RadioButton id="columnSortAscendingRadioBtn" label="Ascending" groupName="columnSortOrder" click="columnSort_changeHandler(event)"/>
-											<s:RadioButton id="columnSortDescendingRadioBtn" label="Descending" groupName="columnSortOrder" click="columnSort_changeHandler(event)"/>	
+											<s:RadioButton id="columnSortNoneRadioBtn" label="None"  value="none" groupName="columnSortOrder" selected="true"  click="columnSort_changeHandler(event)"/>
+											<s:RadioButton id="columnSortAscendingRadioBtn" label="Ascending" value="ascending" groupName="columnSortOrder" click="columnSort_changeHandler(event)"/>
+											<s:RadioButton id="columnSortDescendingRadioBtn" label="Descending" value="descending" groupName="columnSortOrder" click="columnSort_changeHandler(event)"/>	
 											
 										</s:HGroup>	
 									</s:FormItem> 
 									<s:FormItem label="Type:" skinClass="skins.FormItemSkin">
 										<s:HGroup>
-											<s:RadioButton id="columnSortStandardRadioBtn" label="Standard" groupName="columnSortType" selected="true"  click="columnSort_changeHandler(event)"/>
-											<s:RadioButton id="columnSortCategorizedRadioBtn" label="Categorized" groupName="columnSortType" click="columnSort_changeHandler(event)"/>
+											<s:RadioButton id="columnSortStandardRadioBtn" label="Standard" value="false" groupName="columnSortType"   click="columnSortType_changeHandler(event)"/>
+											<s:RadioButton id="columnSortCategorizedRadioBtn" label="Categorized" value="true" groupName="columnSortType" click="columnSortType_changeHandler(event)"/>
 										
 											
 										</s:HGroup>	
 									</s:FormItem> 
+
+                               		<s:VGroup>
+                                        	<s:Label id="columnTwistieLabelText"
+											textAlign="start"
+											verticalAlign="middle"
+											fontWeight="bold"
+											maxDisplayedLines="1" fontSize="13"
+											left="5"  top="5" verticalCenter="0" 
+											text="Show twistie when row is expandable"/>
+                                        <s:CheckBox id="columnExpandable"
+													selected="false"
+													change="check_changeHandler(event)"/>
+                                    </s:VGroup>	
+                                    
 							</mx:VBox>
 							<mx:VBox  horizontalAlign="left" id="columnFormatSetPanel" label="Column Setting-Format" verticalAlign="top" percentHeight="100" 
 		   paddingLeft="5" paddingTop="10" paddingBottom="10" >	
@@ -119,6 +127,7 @@
     import spark.components.gridClasses.GridColumn;
     import view.suportClasses.events.DominoViewColumnUpdateEvent;
 
+    
     private var _columnObject:ColumnObject;
     [Bindable]
     public function set columnObject(value:ColumnObject):void
@@ -156,6 +165,24 @@
                 columnValueFormulaRadioBtn.selected=true;
                 columnValueFieldRadioBtn.selected=false;
                 
+            }
+            if(cobj.columnSort!=null && cobj.columnSort!=""){
+                columnSortOrder.selectedValue=cobj.columnSort;
+            }
+            if(cobj.columnSortType!=null && cobj.columnSortType!=""){
+                columnSortType.selectedValue=cobj.columnSortType;
+                if(columnSortType.selectedValue=="true"){
+                    columnSortCategorizedRadioBtn.selected=true;
+                }else{
+                    columnSortStandardRadioBtn.selected=true;
+                }
+            }
+         
+
+            if(cobj.twisties=="true"){
+                columnExpandable.selected=true;
+            }else{
+                columnExpandable.selected=false;
             }
             columnValueFormula.text=cobj.columnCodeFormula;
             this.columnObject=cobj;
@@ -201,20 +228,40 @@
 
     private function check_changeHandler(event:Event):void
 	{
-		
+		if(this.columnObject!=null){
+            if(columnExpandable.selected){
+                this.columnObject.twisties="true"
+            }else{
+                this.columnObject.twisties="false"
+            }
+            this.dispatchEvent(new DominoViewColumnUpdateEvent(DominoViewColumnUpdateEvent.COLUMN_UPDATE,this.columnObject,true, true) );
+        }
 	}
 
-    private function columnSort_changeHandler(event):void
+    private function columnSort_changeHandler(event:Event):void
 	{
+        if(this.columnObject!=null){
+            this.columnObject.columnSort=columnSortOrder.selection.value.toString();
+            this.dispatchEvent(new DominoViewColumnUpdateEvent(DominoViewColumnUpdateEvent.COLUMN_UPDATE,this.columnObject,true, true) );
+        }
+	}
+    private function columnSortType_changeHandler(event:Event):void
+	{
+        if(this.columnObject!=null){
+            this.columnObject.columnSortType=columnSortType.selection.value.toString();
+            this.dispatchEvent(new DominoViewColumnUpdateEvent(DominoViewColumnUpdateEvent.COLUMN_UPDATE,this.columnObject,true, true) );
+           
+        }
 	}
 
     private function startRemoveColumn():void
     {
          this.dispatchEvent(new Event("removeColumn",true, true));
+            
     }
 
 
-   	private function columnType_changeHandler(event):void
+   	private function columnType_changeHandler(event:Event):void
 	{
 		
 		if(this.columnObject!=null){
