--- a/src/view/domino/forms/renderer/IncludeDropdownListRenderer.mxml
+++ b/src/view/domino/forms/renderer/IncludeDropdownListRenderer.mxml
@@ -57,11 +57,13 @@
 			protected function onCreationCompletes(event:FlexEvent):void
 			{
 				// lets not add tooltip when list has no horizontal scroll
-				if (this.width > this.owner.width)
-				{
-					labelDisplay.addEventListener(ToolTipEvent.TOOL_TIP_CREATE, MoonshineBridgeUtils.moonshineBridge.getCustomTooltipFunction(), false, 0, true);
-					labelDisplay.addEventListener(ToolTipEvent.TOOL_TIP_SHOW, MoonshineBridgeUtils.moonshineBridge.getPositionTooltipFunction(), false, 0, true);
-					isTooltip = true;
+				if(this.owner&& MoonshineBridgeUtils.moonshineBridge){
+					if (this.width > this.owner.width)
+					{
+						labelDisplay.addEventListener(ToolTipEvent.TOOL_TIP_CREATE, MoonshineBridgeUtils.moonshineBridge.getCustomTooltipFunction(), false, 0, true);
+						labelDisplay.addEventListener(ToolTipEvent.TOOL_TIP_SHOW, MoonshineBridgeUtils.moonshineBridge.getPositionTooltipFunction(), false, 0, true);
+						isTooltip = true;
+					}
 				}
 			}
 			
