Fix the not click the fresh colun edit property will report error(Moonshine-IDE/Moonshine-IDE#1016)

--- a/src/view/DominoViewMockVisualEditor.mxml
+++ b/src/view/DominoViewMockVisualEditor.mxml
@@ -191,6 +191,10 @@
 			columnsObj.columnWidth="70";
 			columnsObj.columnTypeValue="Field";
 			columnObjectList.addItem(columnsObj);
+			
+			selectedColumnObject=columnsObj;
+			//selectedColumn=(dgColumns.columns as ArrayList).getItemAt(event.columnInex) as GridColumn;
+			
 			columnAccordion.initializeColumnProperty(columnsObj);
 
 		
